footer ajouter avec image debut de la version mobile correction a faire sur la taille du footer et du header et de la banniere

--- a/kasa/src/index.css
+++ b/kasa/src/index.css
@@ -1,5 +1,5 @@
 body{
-    margin: 2em 4em 2em 4em;
+margin: 0em;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  /* importer la police Monsterrat  */
@@ -11,4 +11,17 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 2em 10em 2em 10em;
+}
+
+
+@media screen and (max-width: 767px) {
+    main {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: 0em;
+        }
+   
 }
