--- a/kasa/src/styles/banner.css
+++ b/kasa/src/styles/banner.css
@@ -34,3 +34,29 @@
     position: relative;
     z-index: 4;
 }
+
+
+@media screen and (max-width: 767px) {
+.ks-banner {
+            display: flex;
+            margin: 1em;
+            width: 90%;
+            height:100px;
+            background-image: url("../asset/photo-de-failse.png");
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            justify-content: center;
+            align-items: center;
+            border-radius: 1em;
+        } 
+
+        
+.overlay-txt {
+    color: rgb(255, 255, 255);
+    position: relative;
+    font-size: 12px;
+    position: relative;
+    z-index: 4;
+} 
+}
