--- a/kasa/src/styles/navigation.css
+++ b/kasa/src/styles/navigation.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
    
     padding:1em 2em 1em 2em ;
+    margin: 1em;
 }
 
 .App-logo{
@@ -22,4 +23,14 @@ a{
 
 a:active{
     text-decoration: underline;
+}
+
+
+@media screen and (max-width: 767px) {
+    .pos-header {
+           
+    
+            padding: 0em;
+            margin: 1em;
+        }
 }
